# restaking

./: .cursorrules  .dockerignore  .gitignore  .yarnrc.yml  Anchor.toml  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  Reward.md  b  codecov.yml  docker-compose.yaml  format.sh  jiajE3TwT9TMEU6Kt4E8KhaMFwJQf6wzdFQyoyzeH64.json  jito1KMVMoza7topKEYxWZXejLsGGGwQuJXQ3s5GRXS.json  lcov.info  makefile  package-lock.json  package.json  release  restaking_program_testnet.json  run_tests.sh  rust-toolchain.toml  rustfmt.toml  t  vault_program_testnet.json
account_traits/: Cargo.toml
account_traits/src/: lib.rs
account_traits_derive/: Cargo.toml
account_traits_derive/src/: lib.rs
anchor_restaking_bindings/: Cargo.toml
anchor_restaking_bindings/src/: lib.rs
api/: Cargo.toml  README.md
api/src/: error.rs  lib.rs
api/src/common/: mod.rs
api/src/restaking/: routes.rs
api/src/router/: mod.rs
api/src/vault/: routes.rs
bytemuck/: Cargo.toml
bytemuck/src/: lib.rs  types.rs
cli/: Cargo.toml  README.md  demo.md  getting_started.md  getting_started_guide.md  temp.json  working.md
cli/src/: cli_args.rs  cli_config.rs  cli_signer.rs  lib.rs  log.rs  restaking.rs  restaking_handler.rs  vault.rs  vault_handler.rs
clients/rust/common/: Cargo.toml
clients/rust/restaking_client/: Cargo.toml
clients/rust/vault_client/: Cargo.toml
core/: Cargo.toml
core/src/: error.rs  lib.rs  loader.rs  slot_toggle.rs  slot_toggled_field.rs
core/src/certora/: mod.rs
cranker/: Cargo.toml
cranker/src/: lib.rs  restaking_handler.rs  vault_handler.rs  vault_update_state_tracker_handler.rs
crankers/: Cargo.toml  Dockerfile  README.md
crankers/src/: core.rs  error.rs  lib.rs  metrics.rs  restaking_handler.rs  vault_handler.rs
examples/color_of_the_epoch/tests/: Cargo.toml
include_idl/: Cargo.toml
include_idl/src/: lib.rs  parse.rs  shrink.rs
integration_tests/: Cargo.toml
integration_tests/tests/: e2e.rs  lrt_program.rs  restaking_program.rs  tests.rs  vault_program.rs
jito-events/: Cargo.toml
jito-events-derive/: Cargo.toml
jito-events-derive/src/: lib.rs
jito-events/src/: lib.rs
lrt_program/: Cargo.toml
lrt_program/src/: lib.rs  processor.rs
lrt_sdk/: Cargo.toml
lrt_sdk/src/: lib.rs
restaking_builder/: Cargo.toml
restaking_client/: Cargo.toml
restaking_client/src/: lib.rs  restaking_client.rs  result.rs
restaking_core/: Cargo.toml
restaking_core/src/: avs.rs  avs_operator_list.rs  avs_operator_ticket.rs  avs_slasher_list.rs  avs_vault_list.rs  avs_vault_slasher_ticket.rs  avs_vault_ticket.rs  config.rs  discriminators.rs  lib.rs  loader.rs  ncn.rs  ncn_operator_state.rs  ncn_operator_ticket.rs  ncn_vault_slasher_ticket.rs  ncn_vault_ticket.rs  node_operator.rs  operator.rs  operator_avs_list.rs  operator_avs_ticket.rs  operator_ncn_ticket.rs  operator_vault_list.rs  operator_vault_ticket.rs  price_table.rs  result.rs  vault.rs
restaking_program/: Cargo.toml  justfile
restaking_program/src/: avs_add_operator.rs  avs_add_vault.rs  avs_add_vault_slasher.rs  avs_cooldown_operator.rs  avs_deprecate_vault_slasher.rs  avs_remove_operator.rs  avs_remove_vault.rs  avs_remove_vault_slasher.rs  avs_set_admin.rs  avs_set_secondary_admin.rs  avs_withdraw_asset.rs  avs_withdrawal_asset.rs  cooldown_ncn_operator_ticket.rs  cooldown_ncn_vault_slasher_ticket.rs  cooldown_ncn_vault_ticket.rs  cooldown_operator_ncn_ticket.rs  cooldown_operator_vault_ticket.rs  get_max_slashable_per_epoch.rs  harvest_lamports.rs  harvest_tokens.rs  initialize_avs.rs  initialize_config.rs  initialize_ncn.rs  initialize_ncn_operator_state.rs  initialize_ncn_operator_ticket.rs  initialize_ncn_vault_slasher_ticket.rs  initialize_ncn_vault_ticket.rs  initialize_operator.rs  initialize_operator_ncn_ticket.rs  initialize_operator_vault_ticket.rs  lib.rs  log.rs  ncn_add_operator.rs  ncn_add_vault.rs  ncn_add_vault_slasher.rs  ncn_cooldown_operator.rs  ncn_cooldown_vault.rs  ncn_cooldown_vault_slasher.rs  ncn_delegate_token_account.rs  ncn_remove_operator.rs  (+29 more)
restaking_sdk/: Cargo.toml
restaking_sdk/src/: error.rs  event.rs  instruction.rs  lib.rs  sdk.rs
shank-cli/: Cargo.toml  README.md
shank-cli/src/: main.rs
vault_builder/: Cargo.toml
vault_core/: Cargo.toml  justfile
vault_core/src/: burn_vault.rs  config.rs  delegation_state.rs  discriminators.rs  lib.rs  loader.rs  operator_delegation.rs  result.rs  vault.rs  vault_avs_list.rs  vault_avs_slasher_operator_ticket.rs  vault_avs_slasher_ticket.rs  vault_avs_ticket.rs  vault_delegation_list.rs  vault_ncn_slasher_operator_ticket.rs  vault_ncn_slasher_ticket.rs  vault_ncn_ticket.rs  vault_operator_delegation.rs  vault_operator_list.rs  vault_operator_ticket.rs  vault_slasher_list.rs  vault_slasher_ticket.rs  vault_staker_withdraw_ticket.rs  vault_staker_withdrawal_ticket.rs  vault_update_state_tracker.rs
vault_program/: Cargo.toml  justfile
vault_program/src/: add_avs.rs  add_delegation.rs  add_ncn.rs  add_operator.rs  add_slasher.rs  burn.rs  burn_withdraw_ticket.rs  burn_withdrawal_ticket.rs  change_withdrawal_ticket_owner.rs  close_update_state_tracker.rs  cooldown_delegation.rs  cooldown_ncn.rs  cooldown_operator.rs  cooldown_vault_ncn_slasher_ticket.rs  cooldown_vault_ncn_ticket.rs  cooldown_vault_operator_ticket.rs  crank_vault_update_state_tracker.rs  create_token_metadata.rs  delegate_token_account.rs  enqueue_withdraw.rs  enqueue_withdrawal.rs  enqueue_withdrawal_frozen.rs  harvest_lamports.rs  harvest_tokens.rs  initialize_config.rs  initialize_frozen_vault.rs  initialize_vault.rs  initialize_vault_avs_slasher_operator_ticket.rs  initialize_vault_delegation_list.rs  initialize_vault_ncn_slasher_operator_ticket.rs  initialize_vault_ncn_slasher_ticket.rs  initialize_vault_ncn_ticket.rs  initialize_vault_operator_delegation.rs  initialize_vault_operator_ticket.rs  initialize_vault_update_state_tracker.rs  initialize_vault_with_mint.rs  lib.rs  mint_to.rs  mint_to_frozen.rs  register_slasher.rs  (+26 more)
vault_sdk/: Cargo.toml
vault_sdk/src/: error.rs  inline_mpl_token_metadata.rs  instruction.rs  lib.rs  sdk.rs
(+498 files in other folders)
