[workspace]
members = [
    "account_traits_derive",
    "bytemuck",
    "cli",
    "clients/rust/restaking_client",
    "clients/rust/vault_client",
    "core",
    "integration_tests",
    "restaking_core",
    "restaking_program",
    "restaking_sdk",
    "shank-cli",
    "vault_core",
    "vault_program",
    "vault_sdk"]

resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.package]
version = "0.0.2"
authors = ["Jito Network Maintainers <support@jito.network>"]
repository = "https://github.com/jito-foundation/restaking"
homepage = "https://jito.network/"
license = "BSL"
edition = "2021"
readme = "README.md"

[workspace.dependencies]
anchor-lang = { version = "0.30.1", features = ["idl-build"] }
anyhow = "1.0.86"
assert_matches = "1.5.0"
borsh = { version = "0.10.3" }
bytemuck = { version = "1.16.3", features = ["min_const_generics"] }
cfg-if = "1.0.0"
chrono = "0.4.38"
clap = { version = "4.5.16", features = ["derive"] }
clap-markdown = { version = "0.1.4" }
const_str_to_pubkey = "0.1.1"
envfile = "0.2.1"
env_logger = "0.10.2"
jito-bytemuck = { path = "bytemuck", version = "=0.0.2" }
jito-account-traits-derive = { path = "account_traits_derive", version = "=0.0.2" }
jito-jsm-core = { path = "core", version = "=0.0.2" }
jito-restaking-client = { path = "clients/rust/restaking_client", version = "=0.0.2" }
jito-restaking-core = { path = "restaking_core", version = "=0.0.2" }
jito-restaking-program = { path = "restaking_program", version = "=0.0.2" }
jito-restaking-sdk = { path = "restaking_sdk", version = "=0.0.2" }
jito-vault-client = { path = "clients/rust/vault_client", version = "=0.0.2" }
jito-vault-core = { path = "vault_core", version = "=0.0.2" }
jito-vault-program = { path = "vault_program", version = "=0.0.2" }
jito-vault-sdk = { path = "vault_sdk", version = "=0.0.2" }
log = "0.4.22"
matches = "0.1.10"
num-derive = "0.4.2"
num-traits = "0.2.19"
proc-macro2 = "1.0.86"
quote = "1.0.36"
serde = { version = "^1.0", features = ["derive"] }
serde_with = "3.9.0"
shank = "0.4.2"
shank_idl = "0.4.2"
solana-account-decoder = "~1.18"
solana-cli-config = "~1.18"
rstest = "0.22.0"
solana-program = "~1.18"
solana-program-test = "~1.18"
solana-sdk = "~1.18"
solana-rpc-client = "~1.18"
solana-rpc-client-api = "~1.18"
solana-security-txt = "1.1.1"
spl-associated-token-account = { version = "3.0.4", features = ["no-entrypoint"] }
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "3.0.4", features = ["no-entrypoint"] }
syn = "2.0.72"
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["full"] }
