[workspace]
members = [
    "account_traits_derive",
    "bytemuck",
    "cli",
    "clients/rust/restaking_client",
    "clients/rust/vault_client",
    "core",
    "crankers",
    "integration_tests",
    "restaking_core",
    "restaking_program",
    "restaking_sdk",
    "shank-cli",
    "vault_core",
    "vault_program",
    "vault_sdk"]

resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.package]
version = "0.0.3"
authors = ["Jito Network Maintainers <support@jito.network>"]
repository = "https://github.com/jito-foundation/restaking"
homepage = "https://jito.network/"
license = "BSL"
edition = "2021"
readme = "README.md"

[workspace.dependencies]
anchor-lang = { git = "https://github.com/coral-xyz/anchor", rev = "96ed3b791c6fed9ab64cb138397795fe55991280", features = ["idl-build"] }
anyhow = "1.0.86"
assert_matches = "1.5.0"
base64 = "0.22.1"
borsh = { version = "0.10.3" }
bytemuck = { version = "1.16.3", features = ["min_const_generics"] }
cfg-if = "1.0.0"
chrono = "0.4.38"
clap = { version = "4.5.16", features = ["derive", "env"] }
clap-markdown = { version = "0.1.4" }
dotenv = "0.15.0"
envfile = "0.2.1"
env_logger = "0.10.2"
futures = "0.3.31"
jito-bytemuck = { path = "bytemuck", version = "=0.0.3" }
jito-account-traits-derive = { path = "account_traits_derive", version = "=0.0.3" }
jito-jsm-core = { path = "core", version = "=0.0.3" }
jito-restaking-client = { path = "clients/rust/restaking_client", version = "=0.0.3" }
jito-restaking-core = { path = "restaking_core", version = "=0.0.3" }
jito-restaking-program = { path = "restaking_program", version = "=0.0.3" }
jito-restaking-sdk = { path = "restaking_sdk", version = "=0.0.3" }
jito-vault-client = { path = "clients/rust/vault_client", version = "=0.0.3" }
jito-vault-core = { path = "vault_core", version = "=0.0.3" }
jito-vault-program = { path = "vault_program", version = "=0.0.3" }
jito-vault-sdk = { path = "vault_sdk", version = "=0.0.3" }
log = "0.4.22"
matches = "0.1.10"
num-derive = "0.4.2"
num-traits = "0.2.19"
proc-macro2 = "1.0.86"
quote = "1.0.36"
serde = { version = "^1.0", features = ["derive"] }
serde_with = "3.9.0"
shank = "0.4.2"
shank_idl = "0.4.2"
solana-account-decoder = "2.1.14"
solana-cli-config = "2.1.14"
solana-metrics = "2.1.14"
solana-program = "2.1.14"
solana-program-test = "2.1.14"
solana-sdk = "2.1.14"
solana-rpc-client = "2.1.14"
solana-rpc-client-api = "2.1.14"
solana-security-txt = "1.1.1"
spl-associated-token-account = { version = "6.0.0", features = ["no-entrypoint"] }
spl-token = { version = "7.0.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "7.0.0", features = ["no-entrypoint"] }
syn = "2.0.72"
test-case = "3.3.1"
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["full"] }
