[workspace]
members = [
    "account_traits_derive",
    "bytemuck",
    "cli",
    "clients/rust/common",
    "clients/rust/restaking_client",
    "clients/rust/vault_client",
    "core",
    "crankers",
    "integration_tests",
    "restaking_core",
    "restaking_program",
    "restaking_sdk",
    "shank-cli",
    "vault_core",
    "vault_program",
    "vault_sdk",
]

resolver = "2"

[workspace.package]
version = "0.0.5"
authors = ["Jito Network Maintainers <support@jito.network>"]
repository = "https://github.com/jito-foundation/restaking"
homepage = "https://jito.network/"
license = "Apache-2.0"
edition = "2021"
readme = "README.md"

[workspace.dependencies]
anchor-lang = { version = "0.31.0", features = ["idl-build"] }
anyhow = "1.0.86"
assert_matches = "1.5.0"
base64 = "0.22.1"
borsh = { version = "1.5.7" }
bytemuck = { version = "1.16.3", features = ["derive", "min_const_generics"] }
cfg-if = "1.0.0"
chrono = "0.4.38"
clap = { version = "4.5.16", features = ["derive", "env"] }
clap-markdown = { version = "0.1.4" }
dotenvy = "0.15.7"
env_logger = "0.10.2"
envfile = "0.2.1"
futures = "0.3.31"
jito-account-traits-derive = { path = "account_traits_derive", version = "=0.0.5" }
jito-bytemuck = { path = "bytemuck", version = "=0.0.5" }
jito-jsm-core = { path = "core", version = "=0.0.5" }
jito-restaking-client = { path = "clients/rust/restaking_client", version = "=0.0.5" }
jito-restaking-client-common = { path = "clients/rust/common", version = "=0.0.5" }
jito-restaking-core = { path = "restaking_core", version = "=0.0.5" }
jito-restaking-program = { path = "restaking_program", version = "=0.0.5" }
jito-restaking-sdk = { path = "restaking_sdk", version = "=0.0.5" }
jito-vault-client = { path = "clients/rust/vault_client", version = "=0.0.5" }
jito-vault-core = { path = "vault_core", version = "=0.0.5" }
jito-vault-program = { path = "vault_program", version = "=0.0.5" }
jito-vault-sdk = { path = "vault_sdk", version = "=0.0.5" }
log = "0.4.22"
matches = "0.1.10"
num-derive = "0.4.2"
num-traits = "0.2.19"
proc-macro2 = "1.0.86"
quote = "1.0.36"
serde = { version = "^1.0", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["preserve_order"] }
serde_with = "3.9.0"
shank = "0.4.5"
shank_idl = "0.4.5"
solana-account-decoder = "3.0.0"
solana-address = "1.0.0"
solana-cli-config = "3.0.0"
solana-commitment-config = "3.0.0"
solana-compute-budget-interface = "3.0.0"
solana-decode-error = "2.3.0"
solana-derivation-path = "3.0.0"
solana-metrics = "3.0.0"
solana-program = {version = "3.0.0", default-features = false }
solana-program-error = "3.0.0"
solana-program-test = "3.0.0"
solana-pubkey = {version = "3.0.0", default-features = false }
solana-remote-wallet = "3.0.0"
solana-rpc-client = "3.0.0"
solana-rpc-client-api = "3.0.0"
solana-sdk = "3.0.0"
solana-security-txt = "1.1.1"
solana-system-interface = { version = "2.0.0", features = ["bincode"] }
spl-associated-token-account-interface = "2.0.0"
spl-token-2022-interface = "2.0.0"
spl-token-interface = "2.0.0"
syn = "2.0.72"
test-case = "3.3.1"
thiserror = "2.0.16"
tokio = { version = "1.36.0", features = ["full"] }
uriparse = "0.6.4"

[workspace.lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(feature, values("frozen-abi", "no-entrypoint"))',
]

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
