[package]
name = "jito-restaking-api"
description = "Jito Restaking API"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
readme = { workspace = true }

[dependencies]
axum = { workspace = true }
clap = { workspace = true, features = ["derive"] }
dotenv = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
jito-bytemuck = { workspace = true }
jito-restaking-core = { workspace = true, features = ["serde"] }
jito-vault-core = { workspace = true, features = ["serde"] }
solana-account-decoder = { workspace = true }
solana-sdk = { workspace = true }
solana-rpc-client = { workspace = true }
solana-rpc-client-api = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
tracing-subscriber = { workspace = true }

[[bin]]
name = "jito-restaking-api"
path = "src/bin/main.rs"

[lib]
name = "jito_restaking_api"
path = "src/lib.rs"