[package]
name = "jito-restaking-api"
description = "Jito Restaking API"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
readme = { workspace = true }

[[bin]]
name = "jito-restaking-api"
path = "src/bin/main.rs"

[dependencies]
anchor-lang = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
clap = { workspace = true }
http = { workspace = true }
jito-bytemuck = { workspace = true }
jito-vault-client = { workspace = true, features = ["serde"] }
jito-vault-core = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
solana-account-decoder = { workspace = true }
solana-program = { workspace = true }
solana-rpc-client = { workspace = true }
solana-rpc-client-api = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-core = { workspace = true }
tracing-subscriber = { workspace = true }
