[package]
name = "jito-bytemuck"
description = "Jito bytemuck library"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
readme = { workspace = true }

[dependencies]
borsh = { workspace = true }
bytemuck = { workspace = true }
jito-account-traits-derive = { workspace = true }
solana-program = { workspace = true }
