[package]
name = "jito-restaking-cli"
description = "Jito Restaking CLI"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
readme = { workspace = true }

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
borsh = { workspace = true }
bytemuck = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
clap-markdown = { workspace = true }
env_logger = { workspace = true }
jito-bytemuck = { workspace = true }
jito-jsm-core = { workspace = true }
jito-restaking-client = { workspace = true, features = ["serde"] }
jito-restaking-client-common = { workspace = true }
jito-restaking-core = { workspace = true }
jito-vault-client = { workspace = true }
jito-vault-core = { workspace = true }
jito-vault-sdk = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
solana-account-decoder = { workspace = true }
solana-cli-config = { workspace = true }
solana-program = { workspace = true }
solana-remote-wallet = { workspace = true }
solana-rpc-client = { workspace = true }
solana-rpc-client-api = { workspace = true }
solana-sdk = { workspace = true }
spl-associated-token-account = { workspace = true }
spl-token = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
uriparse = { workspace = true }

[[bin]]
name = "jito-restaking-cli"
path = "src/bin/main.rs"
