[package]
name = "jito-restaking-cli"
description = "Jito Restaking CLI"
version = "1.0.0"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
readme = "./README.md"

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
borsh = { workspace = true }
bytemuck = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
clap-markdown = { workspace = true }
env_logger = { workspace = true }
jito-bytemuck = { workspace = true }
jito-jsm-core = { workspace = true }
jito-restaking-client = { workspace = true, features = ["serde"] }
jito-restaking-client-common = { workspace = true }
jito-restaking-core = { workspace = true }
jito-vault-client = { workspace = true, features = ["serde"] }
jito-vault-core = { workspace = true }
jito-vault-sdk = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
solana-account-decoder = "2.1.21"
solana-cli-config = "2.1.21"
solana-program = "2.1.21"
solana-remote-wallet = "2.1.21"
solana-rpc-client = "2.1.21"
solana-rpc-client-api = "2.1.21"
solana-sdk = "2.1.21"
spl-associated-token-account = { workspace = true }
spl-token = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
uriparse = { workspace = true }

[[bin]]
name = "jito-restaking-cli"
path = "src/bin/main.rs"
