[package]
name = "jito-jsm-core"
description = "JSM Core library"
version = "0.0.5"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
readme = { workspace = true }

[dependencies]
borsh = { workspace = true }
bytemuck = { workspace = true }
jito-bytemuck = { workspace = true }
shank = { workspace = true }
solana-decode-error = { workspace = true }
solana-program = { workspace = true }
solana-system-interface = { workspace = true }
spl-associated-token-account-interface = { workspace = true }
spl-token-interface = { workspace = true }
spl-token-2022-interface = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
