[package]
name = "jito-jsm-core"
description = "JSM Core library"
version = "0.0.5"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
readme = { workspace = true }

[dependencies]
borsh = { workspace = true }
bytemuck = { workspace = true }
jito-bytemuck = { workspace = true }
shank = { workspace = true }
solana-decode-error = { workspace = true }
solana-program = { workspace = true }
solana-system-interface = { workspace = true }
spl-associated-token-account-interface = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }

[patch.crates-io]
solana-address = { version = "1.0.0", default-features = false, features = [] }
solana-program = { version = "3.0.0", default-features = false, features = [] }
solana-account-info = { version = "3.0.0", default-features = false, features = [] }
solana-pubkey = { version = "3.0.0", default-features = false, features = [] }
