[package]
name = "jito-jsm-core"
description = "JSM Core library"
version = "0.0.5"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
readme = { workspace = true }

[dependencies]
borsh = { workspace = true }
bytemuck = { workspace = true }
jito-bytemuck = { workspace = true }
shank = { workspace = true }
solana-decode-error = { workspace = true }
solana-program = { workspace = true }
spl-associated-token-account = { workspace = true }
spl-token = { workspace = true }
spl-token-2022 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }

###
### CERTORA SETTINGS AND DEPENDENCIES
###

[features]
certora = ["dep:cvlr"]

[dependencies.cvlr]
workspace = true
optional = true

