[package]
name = "jito-vault-cranker"
description = "Jito Vault Cranker"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
readme = { workspace = true }

[[bin]]
name = "jito-vault-crank"
path = "src/bin/main.rs"

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
bincode = { workspace = true }
clap = { workspace = true }
dotenvy = { workspace = true }
env_logger = { workspace = true }
futures = { workspace = true }
jito-account-traits-derive = { workspace = true }
jito-bytemuck = { workspace = true }
jito-jsm-core = { workspace = true }
jito-restaking-client = { git = "https://github.com/jito-foundation/restaking.git", rev = "bbc5abe64d5bbbeab1d6f33f5a63a97cc3b9638a", features = ["serde"] }
jito-restaking-core = { workspace = true }
jito-vault-client = { git = "https://github.com/jito-foundation/restaking.git", rev = "bbc5abe64d5bbbeab1d6f33f5a63a97cc3b9638a", features = ["serde"] }
jito-vault-core = { workspace = true }
jito-vault-sdk = { workspace = true }
log = { workspace = true }
solana-account-decoder = { workspace = true }
solana-metrics = { workspace = true }
solana-rpc-client = { workspace = true }
solana-rpc-client-api = { workspace = true }
solana-sdk = { workspace = true }
spl-associated-token-account = { workspace = true }
spl-token = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
