[package]
name = "jito-restaking-integration-tests"
description = "Jito's Restaking Tests"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
readme = { workspace = true }

[dev-dependencies]
borsh = { workspace = true }
jito-lrt-core = { workspace = true }
jito-lrt-program = { workspace = true }
jito-lrt-sdk = { workspace = true }
jito-restaking-core = { workspace = true }
jito-restaking-program = { workspace = true }
jito-restaking-sanitization = { workspace = true }
jito-restaking-sdk = { workspace = true }
shank = { workspace = true }
solana-program = { workspace = true }
solana-program-test = { workspace = true }
solana-sdk = { workspace = true }
solana-security-txt = { workspace = true }
spl-associated-token-account = { workspace = true }
spl-token = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
