[package]
name = "jito-events"
description = "Jito events library"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
readme = { workspace = true }

[dependencies]
borsh = { workspace = true }
solana-program = { workspace = true }
jito-events-derive = { workspace  = true }

[dev-dependencies]
bytemuck = { workspace = true }