[package]
name = "jito-lrt-program"
description = "Jito's Liquid Restaking Token Program"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
readme = { workspace = true }

[lib]
crate-type = ["cdylib", "lib"]
name = "jito_lrt_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
borsh = { workspace = true }
jito-lrt-core = { workspace = true }
jito-lrt-sdk = { workspace = true }
jito-restaking-sanitization = { workspace = true }
shank = { workspace = true }
solana-program = { workspace = true }
solana-security-txt = { workspace = true }
spl-associated-token-account = { workspace = true }
spl-token = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
solana-program-test = { workspace = true }
solana-sdk = { workspace = true }
tokio = { workspace = true }
