[package]
name = "jito-restaking-client"
description = "Restaking client library"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
readme = { workspace = true }

[features]
serde = []

[dependencies]
borsh = { workspace = true }
solana-program = { workspace = true }
solana-sdk = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true }
