[package]
name = "jito-restaking-program"
description = "Jito's Restaking Program"
version = "0.0.5"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
readme = { workspace = true }

[lib]
crate-type = ["cdylib", "lib"]
name = "jito_restaking_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
custom-heap = []
custom-panic = []
default = []
mainnet-beta = []
testnet = []
devnet = []
localhost = []

# CERTORA feature
certora = [
    "no-entrypoint", 
    "dep:cvlr", 
    "dep:cvlr-solana",
    "jito-jsm-core/certora", 
    "jito-vault-core/certora"
    ]

[dependencies]
borsh = { workspace = true }
cfg-if = { workspace = true }
jito-bytemuck = { workspace = true }
jito-jsm-core = { workspace = true }
jito-restaking-core = { workspace = true }
jito-restaking-sdk = { workspace = true }
jito-vault-core = { workspace = true }
shank = { workspace = true }
solana-program = { workspace = true }
solana-security-txt = { workspace = true }
spl-associated-token-account = { workspace = true }
spl-token = { workspace = true }
spl-token-2022 = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true


###
### CERTORA SETTINGS AND LIBRARIES
###

[dependencies.cvlr]
workspace = true
optional = true

[dependencies.cvlr-solana]
workspace = true
optional = true

[package.metadata.certora]
sources = [
            "../Cargo.toml",
            "Cargo.toml",
            "src/**/*.rs",
            "../vault_core/src/*.rs",
            "../restaking_core/src/*.rs",
            "../restaking_program/**/*.rs",
            "../core/**/*.rs",
	    ]

solana_inlining = ["../certora/envs/inlining.txt"]
solana_summaries = ["../certora/envs/summaries.txt"]
