[package]
name = "jito-restaking-sdk"
description = "Jito's Restaking SDK"
version = "0.0.5"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
readme = { workspace = true }

[dependencies]
borsh = { workspace = true }
shank = { workspace = true }
solana-decode-error = { workspace = true }
solana-program = { workspace = true }
solana-system-interface = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
solana-program-test = { workspace = true }
solana-sdk = { workspace = true }
tokio = { workspace = true }
