[package]
name = "jito-shank-cli"
description = "Jito Shank CLI"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
readme = { workspace = true }

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
envfile = { workspace = true }
env_logger = { workspace = true }
shank = { workspace = true }
shank_idl = { workspace = true }
log = { workspace = true }