[package]
name = "jito-shank-cli"
description = "Jito Shank CLI"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
readme = { workspace = true }

[dependencies]
anchor-lang-idl-spec = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
env_logger = { workspace = true }
envfile = { workspace = true }
log = { workspace = true }
shank = { workspace = true }
shank_idl = { workspace = true }
