[package]
name = "jito-vault-builder"
description = "Jito's Vault Builder API"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
readme = { workspace = true }

[dependencies]
solana-rpc-client = { workspace = true }
solana-sdk = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]

