[package]
name = "jito-vault-core"
description = "Vault core library"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
readme = { workspace = true }

[dependencies]
borsh = { workspace = true }
bytemuck = { workspace = true }
jito-account-traits = { workspace = true }
jito-jsm-core = { workspace = true }
jito-vault-sdk = { workspace = true }
solana-program = { workspace = true }
spl-associated-token-account = { workspace = true }
spl-token = { workspace = true }
spl-token-2022 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
